@@ -3,6 +3,7 @@ Changes made from the "0.7.1" release to the "0.7.2" release:
 
 * Bertrand Coconnier:
 
+- Negative values passed to glcResolution() now raise GLC_PARAMETER_ERROR
 - Fixed bug #1980982 (Checks for MinGW in the configure script are incomplete)
 - Feature request #1947346 : added files for pkg-config (thanks to Giel
   van Shijndel and Dennis Schridde for providing them)
